# feverdream-trap

./: .gitignore  CLAUDE.md  CREDITS.MD  Cargo.toml  README.md  unpacked pill.glb  unpacked pills.glb
.github/workflows/: release.yaml
assets/: capsule.blend  capsule.glb  capsule_green.glb  car fuse.blend  car fuse.glb  cylinder fuse.blend  cylinder fuse.glb  elevator.blend  elevator.blend1  elevator.glb  fuse.glb  pill.blend  pill_chromatic_aberration.glb  pill_screen_darken.glb  pills.glb
assets/assets/: blend.wgsl
assets/chunks/: center.chunk  chunk.layout  corner_neg_x_neg_z.chunk  corner_neg_x_z.chunk  corner_x_neg_z.chunk  corner_x_z.chunk  demo.layout  drug_clear_aberration.chunk  drug_clear_darken.chunk  drug_disable_aberration.chunk  drug_disable_darken.chunk  elevator.chunk  end_xx_neg_z.chunk  end_xx_z.chunk  end_zz_neg_x.chunk  end_zz_x.chunk  fuse.chunk  pill.chunk  pillar.chunk  red_cube.chunk  sphere.chunk  void.chunk  wall_neg_x.chunk  wall_neg_z.chunk  wall_x.chunk  wall_xx.chunk  wall_z.chunk  wall_zz.chunk
assets/chunks/demo/: elevator.chunk  end_corridor.chunk  floor_only.chunk  open_corridor.chunk  pills_sensor.chunk  room_center.chunk  room_corner_ne.chunk  room_corner_nw.chunk  room_corner_se.chunk  room_corner_sw.chunk  room_elevator.chunk  room_wall_east.chunk  room_wall_north.chunk  room_wall_south.chunk  room_wall_west.chunk  start_corridor.chunk
assets/chunks/elements/: drug_clear_aberration.chunk.element  drug_clear_darken.chunk.element  drug_disable_aberration.chunk.element  drug_disable_darken.chunk.element  elevator.chunk.element  fuse.chunk.element  ground.chunk.element  pill.chunk.element  pillar_base.chunk.element  pillar_column.chunk.element  pillar_top.chunk.element  red_cube.chunk.element  roof.chunk.element  sphere_ground.chunk.element  wall_neg_x.chunk.element  wall_neg_z.chunk.element  wall_x.chunk.element  wall_z.chunk.element
assets/chunks/elements/demo/: ceiling.chunk.element  floating_pill.chunk.element  floor.chunk.element  wall_east.chunk.element  wall_north.chunk.element  wall_south.chunk.element  wall_west.chunk.element
assets/levels/: demo.layout  level_1.layout
assets/shaders/: blend.wgsl  post_processing.wgsl  screen_darken_effect.wgsl
core/: Cargo.toml
core/src/: asset_loader.rs  asset_tracking.rs  audio.rs  chunk.rs  chunk_assets.rs  interactions.rs  level.rs  lib.rs  material.rs  physics.rs  prelude.rs
core/src/theme/: interaction.rs  mod.rs  palette.rs  widget.rs
core/src/utils/: audio.rs  cursor.rs  mod.rs
editor/: Cargo.toml
editor/src/: action_buffer.rs  asset_handling.rs  editor.rs  egui_layout.rs  elements.rs  main.rs  prelude.rs  preview.rs  widget.rs
editor/src/screens/: chunk_editor.rs  chunk_layout_editor.rs  element_editor.rs  mod.rs
game/: Cargo.toml
game/src/: chunk.rs  dev_tools.rs  focus.rs  interaction.rs  level.rs  main.rs  prelude.rs  scene.rs
game/src/camera_controller/: drugs.rs  mod.rs  post_process.rs  rotate.rs  screen_darken.rs  setup.rs  status_effects.rs
game/src/character_controller/: mod.rs
game/src/demo/: animation.rs  level.rs  mod.rs  movement.rs  player.rs
game/src/interaction/: focus.rs  interactions.rs  mod.rs
game/src/menus/: credits.rs  main.rs  mod.rs  pause.rs  settings.rs
game/src/scene/: mod.rs
game/src/screens/: game_over.rs  gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs
game/src/theme/: mod.rs  palette.rs
game/src/utils/: audio.rs  mod.rs
