[workspace]
members = ["core", "game", "editor"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["faervan <faervan@proton.me>", "KirmesBude", "angauber"]

[workspace.dependencies]
feverdream_trap_core.path = "core"

# Bevy & plugins
bevy = { version = "0.18", default-features = false, features = ["3d"] }
avian3d = { version = "0.5", default-features = false, features = [
  # Default
  "3d",
  "f32",
  "parry-f32",
  "bevy_scene",
  "bevy_picking",
  "debug-plugin",
  "parallel",
  # Non-default
  "simd",
] }

# Dev dependencies
bevy-inspector-egui.version = "0.36"
bevy_skein.version = "0.5"

# Useful rust utilities
thiserror = "2"
ron = "0.12"
serde = { version = "1", features = ["derive"] }

[profile.dev]
codegen-units = 512

# Dependency optimization
[profile.dev.package."*"]
opt-level = 3

# Release optimization
[profile.release]
lto = "fat"
panic = "abort"
