[package]
name = "feverdream_trap_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "dep:bevy-inspector-egui",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    # TODO: Fix? does not get disabled for web builds
    #"bevy/file_watcher",
    # TODO: Fix? does not get disabled for web builds
    # Enable embedded asset hot reloading for native dev builds.
    #"bevy/embedded_watcher",
]

[dependencies]
bevy.workspace = true
avian3d.workspace = true

bevy-inspector-egui = { workspace = true, optional = true }

[lints]
workspace = true

