[package]
name = "feverdream_trap_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = ["dep:bevy_egui", "dep:bevy-inspector-egui", "avian3d/diagnostic_ui"]
dev_native = ["dev"]

[dependencies]
bevy.workspace = true
avian3d.workspace = true

bevy_egui = { workspace = true, optional = true }
bevy-inspector-egui = { workspace = true, optional = true }


[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

[lints]
workspace = true
