[package]
name = "feverdream_trap_game"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["dev_native"]
dev = [
  "feverdream_trap_core/dev",
  "dep:bevy_skein",
]
dev_native = [
  "feverdream_trap_core/dev_native"
]

[dependencies]
feverdream_trap_core.workspace = true

bevy.workspace = true
avian3d.workspace = true

bevy-inspector-egui = { workspace = true, optional = true }
bevy_skein = { workspace = true, optional = true }
